adduser (3.82) unstable; urgency=low

  * Don't assume that gid can be equal to the uid. Thanks to
    Junichi Uekawa and Paul Slootman. (jh) Closes: #351480, #351552

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun,  5 Feb 2006 18:12:43 +0000

adduser (3.81) unstable; urgency=low

  [ Marc Haber ]
  * fix swedish manpage addendum thanks to Thomas Huriaux.
  * Update Swedish (sv) manpage translation, again from Daniel Nylander.
  * Update French (fr) program translation.
    Thanks to Aurelien Ricard. (mh) Closes: #341264

  [ Joerg Hoh ]
  * (nearly) all output should now use gettext
  * deluser now removes also user crontabs
  * added only-if-empty parameter to delgroup.conf (Closes: #347717)
  * improved search for new uid/gid (thanks to Karl Rink) (Closes: #119597)

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Sat,  4 Feb 2006 11:57:27 +0000

adduser (3.80) unstable; urgency=low

  * Update Dutch (nl) program translation.
    Thanks to Rob Snelders. (mh) Closes: #339875
  * Fix typo in adduser man page and translations.
    Thanks to A Costa. (mh) Closes: #340343
  * Make Polish (pl) man pages actually included.
    Update Polish (pl) program and manpage translation.
    Thanks to Robert Luberda. (mh) Closes: #340327
  * New Swedish (sv) program translation.
    Thanks to Daniel Nylander. (mh) Closes: #340669
  * New Swedish (sv) manpage translation, also from Daniel.
  * Add addendum.template to aid manpage translators. Thanks to
    Thomas Huriaux.
  * Fix two typos in french manpage translator addenda. Thanks to
    Thomas Huriaux.

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Tue, 29 Nov 2005 14:07:10 +0000

adduser (3.79) unstable; urgency=low

  * Fix shadowless systems _again_.
    Thanks to Matt Zimmerman. (mh) Closes: #339686
  * remove double values from adduser.conf. (mh)
  * Allow underscores in adduser.conf variable names.
    Thanks to David Bishop and Edward J. Shornock. (mh) Closes: #339670
