@@ -21,19 +21,19 @@ GROUP_GID=0
 
 function test_doesUserExist () {
   local user=$1
-  if [ ! `grep $user /etc/passwd` ]; then
-    echo "User $user doesn't exist"
+  if ! grep -q "^$user:" /etc/passwd; then
+    echo "User $user does not exist"
     echo "$0 failed"
     exit 1
   fi
-  USER_UID=`grep $user /etc/passwd | cut -d : -f 3`
-  USER_GID=`grep $user /etc/passwd | cut -d : -f 4`
+  USER_UID=`grep "^$user:" /etc/passwd | cut -d : -f 3`
+  USER_GID=`grep "^$user:" /etc/passwd | cut -d : -f 4`
 }
 
 function test_doesUserNotExist () {
   local user=$1
-  if [ `grep $user /etc/passwd` ]; then
-    echo "User $user doesn't exist"
+  if grep -q "^$user:" /etc/passwd; then
+    echo "User $user exists, but shouldn't"
     echo "$0 failed"
     exit 1
   fi
@@ -42,30 +42,30 @@ function test_doesUserNotExist () {
 
 function test_doesGroupExist () {
   local group=$1
-  if [ ! `grep $group /etc/group` ]; then
+  if ! grep -q "^$group:" /etc/group; then
     echo "group $group does not exist"
     echo "$0 failed"
     exit 1
   fi
-  GROUP_GID=`grep $group /etc/group | cut -d : -f 3`
+  GROUP_GID=`grep "^$group:" /etc/group | cut -d : -f 3`
 }
 
 function test_checkHomeDir () {
   local dir=$1
-  if [ ! -d $dir ]; then
+  if [ ! -d "$dir" ]; then
     echo "  homedirectory $dir does not exist"
     echo "  $0 failed"
     exit 1
   fi
   local uid=`stat -c %u $dir`
   local gid=`stat -c %g $dir`
-  if [ $uid != $USER_UID ]; then
-    echo "  homedir has not the right owner permissions"
+  if [ "$uid" != "$USER_UID" ]; then
+    echo "  home dir has wrong owner permissions"
     echo "  $0 failed"
     exit 1
   fi
-  if [ $gid != $USER_GID ]; then
-    echo "  homedir has not the right group permissions"
+  if [ "$gid" != "$USER_GID" ]; then
+    echo "  home dir has wrong group permissions"
     echo "  $0 failed"
     exit 1
   fi
@@ -73,7 +73,7 @@ function test_checkHomeDir () {
 
 function test_DoesFileExist () {
   local file=$1
-  if [ ! -e $file ]; then
+  if ! [ -e "$file" ]; then
     echo "  file $file does not exist"
     echo "  $0 failed"
     exit 1
@@ -83,8 +83,8 @@ function test_DoesFileExist () {
 
 function test_checkNoHomeDir () {
   local dir=$1
-  if [ -d $dir ]; then
-    echo "  homedir $dir exists, but it shouldn't"
+  if [ -d "$dir" ]; then
+    echo "  home dir $dir exists, but it shouldn't"
     echo "  $0 failed"
     exit 1
   fi
@@ -97,16 +97,16 @@ function getUnusedUID () {
   let "uid=$1-1"
   local available=`cat /etc/passwd | cut -d : -f 3 | sort -g | tr "\n" " "`
   local used=1
-  while [ $used == 1 ]; do
+  while [ "$used" = "1" ]; do
     used=0
     let "uid=$uid+1"
     for i in $available; do
-      if [ $i == $uid ]; then
+      if [ "$i" = "$uid" ]; then
 	used=1
       fi
     done
   done
-  getUnusedUID_uid=$uid 
+  getUnusedUID_uid="$uid"
 }
 
 function newUser() {
@@ -115,5 +115,3 @@ function newUser() {
   echo $id > $userid_file
   USER="$user_prefix$id"
 }
-
-
