@@ -23,7 +23,7 @@ $CMD > /dev/null 2>&1
 
 test_doesUserExist $USER
 
-if [ $id != $USER_UID ]; then
+if [ "$id" != "$USER_UID" ]; then
   echo "haven't got the specified UID $id (but $USER_UID)"
   echo "$0 failed"
   exit 1
@@ -31,7 +31,7 @@ fi
 
 
 test_doesGroupExist nogroup
-if [ $gid != $GROUP_GID ]; then
+if [ "$gid" != "$GROUP_GID" ]; then
   echo "  gid does not match the given one"
   echo "  $0 failed"
   exit 1
