@@ -29,7 +29,7 @@ result=`$CMD 2>&1`
 
 test_doesUserExist $USER
 
-if [ $id != $USER_UID ]; then
+if [ "$id" != "$USER_UID" ]; then
   echo "haven't got the specified UID $id (but $USER_UID)"
   echo "$0 failed"
   exit 1
@@ -37,21 +37,21 @@ fi
 
 
 test_doesGroupExist nogroup
-if [ $gid != $GROUP_GID ]; then
+if [ "$gid" != "$GROUP_GID" ]; then
   echo "  gid does not match the given one"
   echo "  $0 failed"
   exit 1
 fi
 
-tmp=`echo $result | grep -i Warning`
+echo $result | grep -q -i Warning
 warnings=$?
 
-if [  ! $warnings ]; then
+if [ "$warnings" -ne 0 ]; then
   echo "  no warning occured when giving an already existing homedir with wrong owner"
   echo "  $0 failed"
   exit 1
 fi
 
-rm -rf $OTHERHOME
+rm -rf "$OTHERHOME"
 
 
