@@ -2,8 +2,9 @@ adduser (3.82) unstable; urgency=low
 
   * Don't assume that gid can be equal to the uid. Thanks to
     Junichi Uekawa and Paul Slootman. (jh) Closes: #351480, #351552
+  * shell code cleanup in the test suite. (mh)
 
- -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun,  5 Feb 2006 18:12:43 +0000
+ -- Marc Haber <mh+debian-packages@zugschlus.de>  Sun,  5 Feb 2006 19:51:48 +0000
 
 adduser (3.81) unstable; urgency=low
 
